# 512-game

./: Cargo.toml  README.md  index.html
js/: game_manager.js  html_actuator.js
js/strategy/: puzzle512.js  puzzle512_bg.wasm
src/: board.rs  lib.rs  main.rs  strategy.rs  wasm.rs
style/: main.css
