[package]
name = "puzzle-512"
version = "0.1.0"
edition = "2021"


[lib]
name = "puzzle512"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "puzzle512"
path = "src/main.rs"

[dependencies]
bincode = "1.3.3"
boomphf = { version = "0.6.0", features = ["serde"], default-features = false }
serde = { version = "1.0.217", features = ["derive"] }
wasm-bindgen = "0.2.100"
